feat(角色管理): 角色管理
角色管理添加更新状态的接口